--- a/peopleStyle.css
+++ b/peopleStyle.css
@@ -6,6 +6,8 @@
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.064); /* Adjust the shadow as needed */    
     width: 100vw;
     height:70px;
+    z-index: 1; /* Ensure it's above other content */
+        
     
   }
   .fab{
@@ -55,6 +57,32 @@ h2{
     margin: 0px;
     font-weight: 200;
     color: rgb(208, 208, 208);
+  }
+  h1{
+    font-weight: 400;
+    padding:0px;
+    margin:0px; 
+  }
+  h4{
+    font-weight: 200; 
+    padding:0px;
+    margin:0px; 
+  }
+
+  .status{
+  background-color: black;
+  width:35px;
+  margin:5px;
+  color:white;
+  border-radius: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top:3px;
+  padding-bottom:3px;
+  }
+  .status2{
+    position:relative;
+    bottom:-100px;
   }
 
 
