--- a/pages/style/index.css
+++ b/pages/style/index.css
@@ -1,5 +1,14 @@
 
+  /*at all*/
+  body {
+    background-color: rgb(255, 255, 255);
+    padding: 0px;
+    margin: 0px;
+   }
+
 .tipBar {
+    display: flex;
+    justify-content: space-between;
     position: sticky;
     top: 0px;
     background-color: rgb(255, 255, 255);
@@ -7,9 +16,15 @@
     width: 100vw;
     height:70px;
     z-index: 1; /* Ensure it's above other content */
-        
-    
+     
   }
+
+  .user{
+    margin-right: 20px;
+  }
+
+
+
   .fab{
     display: flex;
     justify-content: center;
@@ -35,6 +50,19 @@
     background-color: rgb(236, 239, 194);
     border-radius: 10px;
   }
+.testfab{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 10px;
+  right:10px;
+  width: 50px;
+  height: 50px;
+  background-color: rgb(236, 239, 194);
+  border-radius: 10px; 
+}
+
 /*at index*/
   .peopleSpaces{
     background-color: rgb(255, 255, 255);
@@ -50,12 +78,7 @@
   }
 
 
-  /*at all*/
-body {
-   background-color: rgb(255, 255, 255);
-   padding: 0px;
-   margin: 0px;
-  }
+
 /*at all*/
 h2{
     margin: 0px;
@@ -114,6 +137,8 @@ h2{
         padding-left:15px;
         height: 200px;
         margin: 10px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.17); 
+        z-index: 1;
         /*text-align: center;*/
     }
 
@@ -156,12 +181,15 @@ h2{
   }
   .submit-button {
     background-color: rgba(236, 239, 194, 1);
-    border-radius: 15px;
-    padding: 10px 15px;
-    font-size: 16px;
+    border-radius:50px;
+    padding: 5px;
+    font-size: 14px;
     cursor: pointer;
     display: inline-block;
-    width:70%;
+    width:25%;
+    color:rgba(240, 248, 255, 0);
+    position:absolute;
+    right:20px;
 }
 
 
@@ -172,12 +200,12 @@ h2{
       border-radius: 10px; /* Rounded corners */
       overflow: hidden;
       margin-top:10px;
-      height:15px;
+      height:12px;
     }
 
     /* Styles for the progress bar filler */
     .progress-filler {
-      height: 15px; /* Adjust the height as needed */
+      height: 12px; /* Adjust the height as needed */
       background-color: rgb(255, 204, 0); /* Orange filling color */
       border-radius: 10px; /* Rounded corners */
       transition: width 0.3s ease-in-out; /* Add a smooth transition effect */
@@ -187,16 +215,83 @@ h2{
   background-color: rgb(103, 164,113, 1);
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.17); 
   z-index: 1;
-  height:200px;
+  height:250px;
   width:92vw;
   margin: 10px;
   margin-bottom: 50px;
   margin-top:50px;
 }
-.morequestion{
-  margin:40px;
-  height:200px; 
-  width:92vw; 
-  background-color: rgb(246, 246, 246);
-  border-radius: 15px;
+
+
+/* this is for leetSpace*/
+.chat-container {
+  display: flex;
+  flex-direction: column;
+  height: calc(100vh - 70px);
+}
+
+.chat-messages {
+  flex: 1;
+  overflow-y: scroll;
+  padding: 10px;
+}
+
+.chat-message {
+  padding: 10px;
+  max-width: 60vw;
+  min-width: 10vw;
+  margin-bottom: 10px;
+  background-color: #eee;
+  border-radius: 5px;
+  white-space: nowrap;
+}
+
+
+.chat-message-author {
+  font-weight: bold;
+}
+
+.chat-message-timestamp {
+  font-size: 12px;
+  color: #999;
+}
+
+.chat-input-container {
+  display: flex;
+  margin-top: 10px;
+  padding: 10px;
+  background-color: #fff;
+  border-radius: 5px;
+}
+
+#chat-input {
+  flex: 1;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 50px;
+}
+
+#chat-send-button {
+  font-size: 16px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 10px;
+  background-color: rgb(53, 121, 70);
+  color: #fff;
+  border-radius: 50px;
+  width:80px;
+  border: none;
+  cursor: pointer;
+}
+#leave-button{
+  font-size: 16px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.059);
+  color: #000;
+  border-radius: 50px;
+  width:80px;
+  border: none;
+  cursor: pointer; 
 }
