--- a/pages/style/index.css
+++ b/pages/style/index.css
@@ -17,19 +17,20 @@
     height: 200px;
    }
   .status{
-  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.529);
   width:35px;
   margin:5px;
   color:white;
-  border-radius: 20px;
-  padding-left: 5px;
+  border-radius: 10px;
+  padding-left: 8px;
   padding-right: 5px;
   padding-top:3px;
   padding-bottom:3px;
   }
   .status2{
     position:relative;
-    bottom:-100px;
+    bottom:-60px;
+    font-size: 15px;
   }
 
 .scroll-container {
@@ -41,11 +42,11 @@
 
 .scroll-item {
         display: inline-block;
-        width: 200px; /* Adjust the width of each square image as needed */
-        background-color:  rgba(236, 239, 194, 0.82);border-radius: 30px;
+        width: 150px; /* Adjust the width of each square image as needed */
+        background-color:  rgba(236, 239, 194, 0.82);border-radius: 15px;
         color:rgb(0, 0, 0);
         padding-left:15px;
-        height: 200px;
+        height: 150px;
         margin: 10px;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.17); 
         z-index: 1;
