--- a/pages/style/global.css
+++ b/pages/style/global.css
@@ -44,7 +44,7 @@
   }
 
 /*at all*/
-h2{
+h2{ font-size: 20px;
     margin: 0px;
     padding-top: 8px;
     padding-left: 8px;
@@ -58,6 +58,7 @@ h2{
     color: rgb(208, 208, 208);
   }
   h1{
+    font-size: 20px;
     font-weight: 400;
     padding:0px;
     margin:0px; 
