--- a/pages/style/leetSpace.css
+++ b/pages/style/leetSpace.css
@@ -42,7 +42,7 @@
   flex: 1;
   padding: 10px;
   border: 1px solid #ccc;
-  border-radius: 10px;
+  border-radius: 30px;
   height:25px;
 }
 
@@ -51,9 +51,9 @@
   margin-left: 5px;
   margin-right: 0px;
   padding: 5px;
-  background-color: rgb(236, 239, 194);
-  color: #000000;
-  border-radius: 10px;
+  background-color: rgba(62, 145, 87, 0.82);
+  color: #ffffff;
+  border-radius: 30px;
   width:75px;
   border: none;
   cursor: pointer;
