--- a/pages/style/global.css
+++ b/pages/style/global.css
@@ -19,7 +19,7 @@
     justify-content: space-between;
     position: sticky;
     top: 0px;
-    background-color: #feffe9;
+    background-color: #ecefc2;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.064); /* Adjust the shadow as needed */    
     width: 100vw;
     height:70px;
