--- a/pages/style/notes.css
+++ b/pages/style/notes.css
@@ -22,6 +22,16 @@
       margin: 10px;
  
   }
+  .question-tile{
+    display: inline-block;
+    width: 85%; /* Adjust the width of each square image as needed */
+    background-color: rgb(246, 246, 246);
+    border-radius: 15px;
+    padding-left:15px;
+    padding-right:15px;
+    height: 100px;
+    margin: 10px;
+  }
   .submit-button {
     background-color: rgba(236, 239, 194, 1);
     border-radius:50px;
