--- a/pages/style/notes.css
+++ b/pages/style/notes.css
@@ -32,6 +32,15 @@
     height: 100px;
     margin: 10px;
   }
+  .solution{
+  background-color: rgb(24, 163, 110);
+  width:120px;
+  color:white;
+  border-radius: 15px;
+  margin-left:15px;
+  position:relative;
+  top:-15px;
+  }
   .submit-button {
     background-color: rgba(236, 239, 194, 1);
     border-radius:50px;
