--- a/pages/style/notes.css
+++ b/pages/style/notes.css
@@ -19,24 +19,22 @@
       padding-left:15px;
       padding-right:15px;
       margin: 10px;
- 
   }
+
   .question-tile{
-    display: inline-block;
+   display: inline-block;
     width: 85%; /* Adjust the width of each square image as needed */
     background-color: rgb(246, 246, 246);
-    border-radius: 15px;
-    padding-left:15px;
-    padding-right:15px;
-    height: 100px;
+    border: 2px solid rgba(0, 0, 0, 0.45);
+    border-radius: 0px;
+    padding: 15px;
     margin: 10px;
   }
   .solution{
-  background-color: rgb(24, 163, 110);
-  width:120px;
+  background-color: rgb(63,83,2);
   color:white;
-  border-radius: 15px;
-  margin-left:15px;
+  border-radius: 0px;
+  margin:15px;
   position:relative;
   top:-15px;
   }
