--- a/pages/style/global.css
+++ b/pages/style/global.css
@@ -19,7 +19,8 @@
     justify-content: space-between;
     position: sticky;
     top: 0px;
-    background-color: #ecefc2;
+    background-color: #1c2128;
+    color:#fff;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.064); /* Adjust the shadow as needed */    
     width: 100vw;
     height:70px;
@@ -84,13 +85,13 @@ h2{ font-size: 20px;
       border-radius: 10px; /* Rounded corners */
       overflow: hidden;
       margin-top:10px;
-      height:10px;
+      height:8px;
     }
 
     /* Styles for the progress bar filler */
     .progress-filler {
-      height: 10px; /* Adjust the height as needed */
-      background-color: rgb(255, 204, 0); /* Orange filling color */
+      height: 8px; /* Adjust the height as needed */
+      background-color: rgb(255, 166, 0); /* Orange filling color */
       border-radius: 10px; /* Rounded corners */
       transition: width 0.3s ease-in-out; /* Add a smooth transition effect */
     }
