--- a/pages/style/index.css
+++ b/pages/style/index.css
@@ -7,7 +7,7 @@
     right:20px;
     width: 50px;
     height: 50px;
-    background-color: rgb(227, 232, 158);
+    background-color: #1c2128;
     border-radius: 10px;
   }
 /*at index*/
@@ -43,13 +43,12 @@
 .scroll-item {
         display: inline-block;
         width: 150px; /* Adjust the width of each square image as needed */
-        background-color:  rgba(62, 145, 87, 0.82);border-radius: 15px;
-        color:rgb(255, 255, 255);
+        background-color: #eff1f3;
+        border-radius: 15px;
+        color:rgb(0, 0, 0);
         padding-left:15px;
         height: 150px;
         margin: 10px;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.17); 
-        z-index: 1;
         /*text-align: center;*/
     }
 
@@ -65,13 +64,15 @@
         margin: 0;
     }
 .scroll-item2 {
-        display: inline-block;
-        width: calc(100vw - 50px); /* Adjust the width of each square image as needed */
-        background-color: rgb(246, 246, 246);
-        border-radius: 15px;
-        padding-left:15px;
-        padding-right:15px;
-        height: 100px;
-        margin: 10px;
-   
+  display: inline-block;
+  width: calc(100vw - 50px);
+  background-color: #ffffff;
+  border-style: solid; /* Set the border style to solid */
+  border-width: 2px; /* Adjust the border width as needed */
+  border-color: #eff1f3;
+  border-radius: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+  height: 100px;
+  margin: 10px;
     }
