--- a/pages/style/notes.css
+++ b/pages/style/notes.css
@@ -8,7 +8,7 @@
     right:20px;
     width: 50px;
     height: 50px;
-    background-color: rgb(227, 232, 158);
+    background-color: #1c2128;
     border-radius: 10px;
   }
   .note-tile{
@@ -39,7 +39,6 @@
   position:relative;
   top:-15px;
   box-shadow: 0px 4px 8px rgba(102, 102, 102, 0.17); 
-  z-index: 1;
   }
   .submit-button {
     background-color: rgba(236, 239, 194, 1);
