--- a/pages/style/test.css
+++ b/pages/style/test.css
@@ -7,7 +7,7 @@
   right:20px;
   width: 50px;
   height: 50px;
-  background-color: rgb(227, 232, 158);
+  background-color: #1c2128;
   border-radius: 10px; 
 }
 .note-tile{
