--- a/pages/style/global.css
+++ b/pages/style/global.css
@@ -107,3 +107,22 @@ h2{ font-size: 20px;
   margin-top:10px;
 }
 
+.question-tile{
+  display: inline-block;
+   width: 85%; /* Adjust the width of each square image as needed */
+   background-color: rgb(246, 246, 246);
+   border: 2px solid rgba(0, 0, 0, 0.45);
+   border-radius: 0px;
+   padding: 15px;
+   margin: 10px;
+ }
+ .solution{
+ background-color: rgb(255, 255, 255);
+ color:rgb(0, 0, 0);
+ border-radius: 0px;
+ margin:15px;
+ margin-bottom:30px;
+ position:relative;
+ top:-15px;
+ box-shadow: 0px 4px 8px rgba(102, 102, 102, 0.17); 
+ }
