--- a/pages/style/global.css
+++ b/pages/style/global.css
@@ -126,3 +126,15 @@ h2{ font-size: 20px;
  top:-15px;
  box-shadow: 0px 4px 8px rgba(102, 102, 102, 0.17); 
  }
+
+ .submit-button {
+  border-radius:50px;
+  padding: 5px;
+  font-size: 14px;
+  cursor: pointer;
+  display: inline-block;
+  width:25%;
+  color:rgba(240, 248, 255, 0);
+  position:absolute;
+  right:20px;
+}
