--- a/pages/style/global.css
+++ b/pages/style/global.css
@@ -138,3 +138,14 @@ h2{ font-size: 20px;
   position:absolute;
   right:20px;
 }
+
+.glass {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: inherit;
+  filter: blur(10px);
+  z-index: 999;
+}
