--- a/pages/style/global.css
+++ b/pages/style/global.css
@@ -139,13 +139,6 @@ h2{ font-size: 20px;
   right:20px;
 }
 
-.glass {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: inherit;
-  filter: blur(10px);
-  z-index: 999;
+.user{
+border-radius:50px;
 }
