--- a/pages/style/global.css
+++ b/pages/style/global.css
@@ -19,8 +19,8 @@
     justify-content: space-between;
     position: sticky;
     top: 0px;
-    background-color: #1c2128;
-    color:#fff;
+    background-color: #ffffff;
+    color:#000000;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.064); /* Adjust the shadow as needed */    
     width: 100vw;
     height:70px;
