--- a/pages/style/global.css
+++ b/pages/style/global.css
@@ -81,7 +81,7 @@ h2{ font-size: 20px;
    /* Styles for the progress bar container */
     .progress-container {
       width: 95%;/* Adjust the width as needed */
-      background-color: #ffe7a0; /* Amber background color */
+      background-color: #dfdfdf; /* Amber background color */
       border-radius: 10px; /* Rounded corners */
       overflow: hidden;
       margin-top:10px;
@@ -91,7 +91,7 @@ h2{ font-size: 20px;
     /* Styles for the progress bar filler */
     .progress-filler {
       height: 8px; /* Adjust the height as needed */
-      background-color: rgb(255, 166, 0); /* Orange filling color */
+      background-color: rgb(0, 132, 255); /* Orange filling color */
       border-radius: 10px; /* Rounded corners */
       transition: width 0.3s ease-in-out; /* Add a smooth transition effect */
     }
