--- a/pages/style/global.css
+++ b/pages/style/global.css
@@ -91,7 +91,7 @@ h2{ font-size: 20px;
     /* Styles for the progress bar filler */
     .progress-filler {
       height: 8px; /* Adjust the height as needed */
-      background-color: rgb(0, 132, 255); /* Orange filling color */
+      background-color: rgb(28, 33, 40);
       border-radius: 10px; /* Rounded corners */
       transition: width 0.3s ease-in-out; /* Add a smooth transition effect */
     }
