--- a/pages/style/notes.css
+++ b/pages/style/notes.css
@@ -21,4 +21,7 @@
       margin: 10px;
   }
 
-  
+  .blur {
+    filter: blur(5px); /* You can adjust the blur radius as needed */
+    cursor: pointer;
+}
