--- a/pages/style/calculator.css
+++ b/pages/style/calculator.css
@@ -12,7 +12,7 @@
     .header {
       height: 100px;
       padding: 37px 29px 27px;
-      background: #212121;
+      background:#ffffff;
       border-top-left-radius: 5px;
       border-top-right-radius: 5px;
       text-align: right;
@@ -21,12 +21,12 @@
         background: transparent;
         border: none;
         outline: none;
-        color: #d98192;
+        color: #000000;
         font-size: 18px;
         text-align: right;
       }
       .input::placeholder {
-        color: #d98192;
+        color: #5f5f5f;
       }
       .output {
         width: 100%;
@@ -36,10 +36,10 @@
         border: none;
         outline: none;
         font-size: 60px;
-        color: #fff;
+        color: #000000;
       }
       .output::placeholder {
-        color: #fff;
+        color: #3b3b3b;
       }
     }
     .main {
